--- a/requirements.txt
+++ b/requirements.txt
@@ -171,10 +171,10 @@ tifffile==2025.5.10
 timm==1.0.22
 tokenizers==0.22.1
 tomli==2.3.0
-torch==2.6.0+cu124
-torchaudio==2.6.0+cu124
+torch==2.6.0
+torchaudio==2.6.0
 torchmetrics==1.8.2
-torchvision==0.21.0+cu124
+torchvision==0.21.0
 tqdm==4.67.1
 transformers==4.57.1
 triton==3.2.0
