--- a/configs/CREMA_D/default_config_cremad_res_syn.json
+++ b/configs/CREMA_D/default_config_cremad_res_syn.json
@@ -8,10 +8,11 @@
     "batch_size": 32,
     "test_batch_size": 32,
     "data_loader_workers": 8,
+    "verbose": true,
     "pin_memory": false,
     "async_loading": true,
     "validation": true,
-    "rec_test": false,
+    "rec_test": true,
     "test_on_bottoms": false,
     "use_test_set": true,
     "tdqm_disable": true,
