--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
+choreographer==1.2.1
 click==8.3.1
 colorama==0.4.6
 contourpy==1.3.2
@@ -63,6 +64,7 @@ ImageIO==2.37.2
 imageio-ffmpeg==0.6.0
 importlib_metadata==8.7.0
 inflate64==1.0.3
+iniconfig==2.3.0
 Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.5.2
@@ -70,12 +72,14 @@ jsonlines==4.0.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 kagglehub==0.3.13
+kaleido==1.2.0
 kiwisolver==1.4.9
 lazy_loader==0.4
 lia-web==0.2.3
 librosa==0.11.0
 lightning-utilities==0.15.2
 llvmlite==0.45.1
+logistro==2.0.1
 MarkupSafe==2.1.5
 matplotlib==3.10.7
 mongoengine==0.29.1
@@ -108,12 +112,15 @@ nvidia-nvtx-cu12==12.4.127
 opencv-python==4.12.0.88
 opencv-python-headless==4.12.0.88
 openTSNE==1.0.4
+orjson==3.11.5
 packaging==25.0
 pandas==2.3.3
 paramiko==3.5.1
-pillow
+peft==0.18.0
+pillow==12.0.0
 platformdirs==4.5.0
 plotly==6.5.0
+pluggy==1.6.0
 pooch==1.8.2
 pprintpp==0.4.0
 priority==2.0.0
@@ -129,10 +136,13 @@ pycryptodomex==3.23.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 pydash==8.0.5
+Pygments==2.19.2
 pymongo==4.9.2
 PyNaCl==1.6.1
 pyparsing==3.2.5
 pyppmd==1.2.0
+pytest==9.0.2
+pytest-timeout==2.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytorch-metric-learning==2.9.0
@@ -150,6 +160,7 @@ scikit-image==0.25.2
 scikit-learn==1.7.2
 scipy==1.15.3
 sentry-sdk==2.44.0
+simplejson==3.20.2
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -171,10 +182,10 @@ tifffile==2025.5.10
 timm==1.0.22
 tokenizers==0.22.1
 tomli==2.3.0
-torch==2.6.0
-torchaudio==2.6.0
+torch==2.6.0+cu124
+torchaudio==2.6.0+cu124
 torchmetrics==1.8.2
-torchvision==0.21.0
+torchvision==0.21.0+cu124
 tqdm==4.67.1
 transformers==4.57.1
 triton==3.2.0
