--- a/requirements.txt
+++ b/requirements.txt
@@ -1,208 +1,27 @@
-accelerate==1.11.0
-aiofiles==25.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.11.0
-argcomplete==3.6.3
-async-lru==2.0.5
-async-timeout==5.0.1
-attrs==25.4.0
-audioread==3.1.0
-bcrypt==5.0.0
-beautifulsoup4==4.14.2
-boto3==1.40.75
-botocore==1.40.75
-brotli==1.2.0
-cachetools==6.2.2
-certifi==2025.11.12
-cffi==2.0.0
-charset-normalizer==3.4.4
-choreographer==1.2.1
-click==8.3.1
-colorama==0.4.6
-contourpy==1.3.2
-cryptography==46.0.3
-cycler==0.12.1
-dacite==1.9.2
-datasets==4.4.1
-decorator==5.2.1
-Deprecated==1.3.1
-diffusers==0.35.2
-dill==0.4.0
-dnspython==2.8.0
-easydict==1.13
-einops==0.8.1
-exceptiongroup==1.3.0
-ffmpeg==1.4
-fiftyone==1.10.0
-fiftyone-brain==0.21.4
-fiftyone-db==0.4.0
-filelock==3.19.1
-fonttools==4.60.1
-frozenlist==1.8.0
-fsspec==2025.9.0
-ftfy==6.3.1
-gitdb==4.0.12
-GitPython==3.1.45
-glob2==0.7
-graphql-core==3.2.7
-h11==0.16.0
-h2==4.3.0
-h5py==3.15.1
-hf-xet==1.2.0
-hpack==4.1.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.36.0
-humanize==4.14.0
-Hypercorn==0.18.0
-hyperframe==6.1.0
-idna==3.11
-ImageIO==2.37.2
-imageio-ffmpeg==0.6.0
-importlib_metadata==8.7.0
-inflate64==1.0.3
-iniconfig==2.3.0
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.5.2
-jsonlines==4.0.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-kagglehub==0.3.13
-kaleido==1.2.0
-kiwisolver==1.4.9
-lazy_loader==0.4
-lia-web==0.2.3
-librosa==0.11.0
-lightning-utilities==0.15.2
-llvmlite==0.45.1
-logistro==2.0.1
-MarkupSafe==2.1.5
-matplotlib==3.10.7
-mongoengine==0.29.1
-motor==3.6.1
-moviepy==2.2.1
-mpmath==1.3.0
-msgpack==1.1.2
-multidict==6.7.0
-multiprocess==0.70.18
-multivolumefile==0.2.3
-narwhals==2.12.0
-networkx==3.3
-numba==0.62.1
-numpy==2.2.6
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-cufile-cu12==1.14.1.1
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvshmem-cu12==3.4.5
-nvidia-nvtx-cu12==12.4.127
-opencv-python==4.12.0.88
-opencv-python-headless==4.12.0.88
-openTSNE==1.0.4
-orjson==3.11.5
-packaging==25.0
-pandas==2.3.3
-paramiko==3.5.1
-peft==0.18.0
-pillow==12.0.0
-platformdirs==4.5.0
-plotly==6.5.0
-pluggy==1.6.0
-pooch==1.8.2
-pprintpp==0.4.0
-priority==2.0.0
-proglog==0.1.12
-propcache==0.4.1
-protobuf==6.33.1
-psutil==7.1.3
-py7zr==1.0.0
-pyarrow==22.0.0
-pybcj==1.0.6
-pycparser==2.23
-pycryptodomex==3.23.0
-pydantic==2.12.4
-pydantic_core==2.41.5
-pydash==8.0.5
-Pygments==2.19.2
-pymongo==4.9.2
-PyNaCl==1.6.1
-pyparsing==3.2.5
-pyppmd==1.2.0
-pytest==9.0.2
-pytest-timeout==2.4.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytorch-metric-learning==2.9.0
-pytz==2025.2
-PyYAML==6.0.3
-pyzstd==0.18.0
-rarfile==4.2
-regex==2025.11.3
-requests==2.32.5
-retrying==1.4.2
-rtree==1.4.1
-s3transfer==0.14.0
-safetensors==0.6.2
-scikit-image==0.25.2
-scikit-learn==1.7.2
-scipy==1.15.3
-sentry-sdk==2.44.0
-simplejson==3.20.2
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soundfile==0.13.1
-soupsieve==2.8
-soxr==1.0.0
-sse-starlette==0.10.3
-sseclient-py==1.8.0
-starlette==0.50.0
-strawberry-graphql==0.286.0
-style==1.1.0
-sympy==1.13.1
-tabulate==0.9.0
-taskgroup==0.2.2
-texttable==1.7.0
-threadpoolctl==3.6.0
-tifffile==2025.5.10
-timm==1.0.22
-tokenizers==0.22.1
-tomli==2.3.0
-torch==2.6.0+cu124
-torchaudio==2.6.0+cu124
-torchmetrics==1.8.2
-torchvision==0.21.0+cu124
-tqdm==4.67.1
-transformers==4.57.1
-triton==3.2.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-tzlocal==5.3.1
-universal-analytics-python3==1.1.1
-update==0.0.1
-urllib3==2.5.0
-voxel51-eta==0.15.1
-wandb==0.23.0
-wcwidth==0.2.14
-wrapt==2.0.1
-wsproto==1.3.1
-xmltodict==1.0.2
-xxhash==3.6.0
-yacs==0.1.8
-yarl==1.22.0
-zipp==3.23.0
+aiohttp
+colorama
+datasets
+diffusers
+easydict
+einops
+ffmpeg
+fiftyone
+h5py
+jaraco.collections
+kagglehub
+kaleido
+librosa
+moviepy
+nvidia-cufile-cu12
+nvidia-nvshmem-cu12
+opencv-python
+opentsne
+peft
+pip-chill
+pytorch-metric-learning
+timm
+torchaudio
+torchmetrics
+update
+wandb
+yacs
