--- a/requirements.txt
+++ b/requirements.txt
@@ -9,19 +9,14 @@ fiftyone
 h5py
 jaraco.collections
 kagglehub
-kaleido
 librosa
 moviepy
-nvidia-cufile-cu12
-nvidia-nvshmem-cu12
-opencv-python
 opentsne
 peft
-pip-chill
 pytorch-metric-learning
 timm
+torch
 torchaudio
 torchmetrics
-update
 wandb
 yacs
